# credem-autodoc

./: .gitignore  README.md  pyproject.toml
cli/: cli.py
src/: add_hyperlink.py  generate_doc.py  generate_table.py  generate_test_plan.py
templates/: template.docx
