[tool.poetry]
name = "autodoc"
version = "0.1.0"
description = ""
authors = ["Daniele Frigo <daniele.frigo@sdggroup.com>"]
readme = "README.md"

packages = [
    { include = "cli" },
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.20.0"
python-docx = "^1.2.0"
pyyaml = "^6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autodoc = 'cli.cli:app'
